--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
+### run paper ###
+LoadBalancer-API-Server-Bukkit/run
+
 ### IntelliJ IDEA ###
 .idea/*
 *.iws
